--- a/src/app/poll/poll-selection/poll-selection.component.html
+++ b/src/app/poll/poll-selection/poll-selection.component.html
@@ -9,9 +9,10 @@
 
 <div *ngIf="polls && polls.length > 0">
     <h2>Select poll</h2>
-    <ul>
-        <li *ngFor="let poll of polls">
-            <a [routerLink]="[poll.id]" queryParamsHandling="merge">{{poll.title[translate.currentLang]}} - {{poll.description[translate.currentLang]}}</a>
-        </li>
-    </ul>
+    <div class="list-group poll-list">
+        <a class="list-group-item list-group-item-action" *ngFor="let poll of polls" [routerLink]="[poll.id]" queryParamsHandling="merge">
+            <h3>{{poll.title[translate.currentLang]}}</h3>
+            <p class="mb-0" *ngIf="poll.description[translate.currentLang]">{{poll.description[translate.currentLang]}}</p>
+        </a>
+    </div>
 </div>
