--- a/src/app/poll/poll-selection/poll-selection.component.html
+++ b/src/app/poll/poll-selection/poll-selection.component.html
@@ -1,9 +1,19 @@
 <div *ngIf="!polls">
     <h2>Poll</h2>
-    <form [formGroup]="pinForm" (submit)="confirmPin()" *ngIf="!polls" class="form-inline justify-content-center">
-        <label for="pin" class="mr-sm-2">Enter your pin</label>
-        <input id="pin" formControlName="pin" class="form-control mr-sm-2">
-        <button class="btn btn-primary mt-2 mt-sm-0 flex-grow-1 flex-sm-grow-0" type="submit">{{'show-event.continue'|translate}}</button>
+    <form [formGroup]="pinForm" (submit)="confirmPin()" *ngIf="!polls">
+        <div class="row">
+            <div class="col-12">
+                <div class="form-group">
+                    <label for="pin">Enter your pin</label>
+                    <input id="pin" formControlName="pin" class="form-control" appInvalidFeedback>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 offset-md-8 col-12">
+                <button class="btn btn-success btn-block" type="submit">{{'show-event.continue'|translate}}</button>
+            </div>
+        </div>
     </form>
 </div>
 
