--- a/src/app/poll/display-poll/display-poll.component.scss
+++ b/src/app/poll/display-poll/display-poll.component.scss
@@ -7,3 +7,19 @@
 .poll-title, .poll-description {
     display: block;
 }
+
+.poll-title {
+    font-weight: bold;
+}
+
+.poll-question {
+    border-bottom:1px solid rgba(0, 0, 0, 0.125);;
+}
+
+.poll-question.last {
+    border-bottom: none;
+}
+
+.selected {
+    background-color: #eee;
+}
