--- a/src/app/poll/poll-selection/poll-selection.component.html
+++ b/src/app/poll/poll-selection/poll-selection.component.html
@@ -4,21 +4,21 @@
         <div class="row">
             <div class="col-12">
                 <div class="form-group">
-                    <label for="pin">Enter your pin</label>
+                    <label for="pin" translate="poll.enter-your-pin"></label>
                     <input id="pin" formControlName="pin" class="form-control" appInvalidFeedback>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-md-4 offset-md-8 col-12">
-                <button class="btn btn-success btn-block" type="submit">{{'show-event.continue'|translate}}</button>
+                <button class="btn btn-success btn-block" type="submit" translate="show-event.continue"></button>
             </div>
         </div>
     </form>
 </div>
 
 <div *ngIf="polls && polls.length > 0">
-    <h2>Select poll</h2>
+    <h2 translate="poll.select"></h2>
     <div class="list-group poll-list">
         <a class="list-group-item list-group-item-action" *ngFor="let poll of polls" [routerLink]="[poll.id]" queryParamsHandling="merge">
             <h3>{{poll.title[translate.currentLang]}}</h3>
