--- a/src/app/poll/poll-selection/poll-selection.component.html
+++ b/src/app/poll/poll-selection/poll-selection.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!polls">
     <h2 translate="poll.title"></h2>
     <form [formGroup]="pinForm" (submit)="confirmPin()" *ngIf="!polls">
-        <div class="row">
+        <div class="row mt-3">
             <div class="col-12">
                 <div class="form-group">
                     <label for="pin" translate="poll.enter-your-pin"></label>
@@ -9,7 +9,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row mt-3">
             <div class="col-md-4 offset-md-8 col-12">
                 <button class="btn btn-success btn-block" type="submit" translate="show-event.continue"></button>
             </div>
