#55 initial work, add list-all event page, show only first 4 events

--- a/src/app/basic-event-info/basic-event-info.component.scss
+++ b/src/app/basic-event-info/basic-event-info.component.scss
@@ -28,7 +28,7 @@ a.no-decoration:hover {
   right: 10px;
 }
 
-.event-list-card {
+.event-card {
     h2.card-title {
         font-size: 1.6rem;
     }
