--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
     <app-basic-event-info [event]="event"></app-basic-event-info>
   </div>
   <div *ngIf="allEvents.length > 4" class="text-center">
-    <a [routerLink]="['events-all']" class="btn btn-outline-primary">View all events</a>
+    <a [routerLink]="['events-all']" class="btn btn-outline-primary" translate="home.view.all.events"></a>
   </div>
   
 
@@ -17,10 +17,14 @@
   </div>
 
   <div *ngIf="subscriptions && subscriptions.length > 0">
-    <h1>Subscriptions</h1>
+    <h1 translate="subscription.title"></h1>
 
     <div class="mb-3" *ngFor="let subscription of subscriptions">
       {{subscription|json}}
+    </div>
+
+    <div *ngIf="allSubscriptions.length > 4" class="text-center">
+      <a [routerLink]="['subscriptions-all']" class="btn btn-outline-primary" translate="home.view.all.subscriptions"></a>
     </div>
   </div>
 
