initial work for subscription flow

--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="event" class="add-margin-bottom">
-    <header><app-event-header [event]="event"></app-event-header></header>
+<div *ngIf="purchaseContext" class="add-margin-bottom">
+    <header><app-event-header [event]="purchaseContext"></app-event-header></header>
     <hr>
     <main><ng-content></ng-content></main>
 </div>
