--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -1,6 +1,6 @@
 <app-reservation>
 
-<div *ngIf="reservationInfo && event">
+<div *ngIf="reservationInfo && purchaseContext">
 
   <app-stepper [currentStep]="2" [free]="reservationInfo.orderSummary.free"></app-stepper>
 
@@ -41,10 +41,10 @@
 
     <!-- invoicing section -->
     <a id="invoiceSection" #invoiceAnchor></a>
-    <div *ngIf="!reservationInfo.orderSummary.free && event.invoicingConfiguration.onlyInvoice" class="mb-4 mt-4">
-      <app-invoice-form [form]="contactAndTicketsForm" [event]="event"></app-invoice-form>
+    <div *ngIf="!reservationInfo.orderSummary.free && purchaseContext.invoicingConfiguration.onlyInvoice" class="mb-4 mt-4">
+      <app-invoice-form [form]="contactAndTicketsForm" [event]="purchaseContext"></app-invoice-form>
     </div>
-    <div *ngIf="!reservationInfo.orderSummary.free && !event.invoicingConfiguration.onlyInvoice && event.invoicingConfiguration.invoiceAllowed" class="mb-4 mt-4">
+    <div *ngIf="!reservationInfo.orderSummary.free && !purchaseContext.invoicingConfiguration.onlyInvoice && purchaseContext.invoicingConfiguration.invoiceAllowed" class="mb-4 mt-4">
       <div class="custom-control custom-checkbox">
         <input class="custom-control-input" type="checkbox" formControlName="invoiceRequested" (change)="handleInvoiceRequestedChange()" id="invoiceRequested">
         <label for="invoiceRequested" class="custom-control-label">
@@ -52,14 +52,14 @@
         </label>
       </div>
 
-      <app-invoice-form *ngIf="contactAndTicketsForm.value.invoiceRequested" [form]="contactAndTicketsForm" [event]="event"></app-invoice-form>
+      <app-invoice-form *ngIf="contactAndTicketsForm.value.invoiceRequested" [form]="contactAndTicketsForm" [event]="purchaseContext"></app-invoice-form>
     </div>
     <!-- -->
 
 
     <h2 translate="reservation-page.attendees"></h2>
 
-    <div class="custom-control custom-checkbox wMarginBottom" *ngIf="!event.assignmentConfiguration.forceAssignment && ticketCounts > 1 && !reservationInfo.containsCategoriesLinkedToGroups">
+    <div class="custom-control custom-checkbox wMarginBottom" *ngIf="!purchaseContext.assignmentConfiguration.forceAssignment && ticketCounts > 1 && !reservationInfo.containsCategoriesLinkedToGroups">
       <input id="postponeAssignment" class="custom-control-input" type="checkbox" formControlName="postponeAssignment" id="postpone-assignment" value="true">
       <label class="custom-control-label" for="postpone-assignment">{{' '}}{{'reservation-page.postpone-assignment'|translate}}</label>
     </div>
@@ -84,7 +84,7 @@
                   </div>
               </div>
               <div class="h3 mb-3"><small class="text-muted">{{tc.name}}</small></div>
-              <app-ticket-form [ticket]="ticket" [event]="event" [form]="getTicketForm(ticket)"></app-ticket-form>
+              <app-ticket-form [ticket]="ticket" [event]="purchaseContext" [form]="getTicketForm(ticket)"></app-ticket-form>
           </div>
         </div>
       </div>
@@ -92,7 +92,7 @@
 
     <div class="mt-3 mb-3" aria-hidden="true"><strong>*</strong>{{' '}}<span translate="common.required-fields"></span></div>
     <hr class="mt-5">
-    <app-event-footer-links [event]="event"></app-event-footer-links>
+    <app-event-footer-links [event]="purchaseContext"></app-event-footer-links>
 
 
     <div class="row d-flex justify-content-between mobile-add-margin-bottom">
