change type of parameter: Event -> PurchaseContext

--- a/src/app/view-ticket/view-ticket.component.html
+++ b/src/app/view-ticket/view-ticket.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="event && ticketInfo" class="add-margin-bottom">
-<header><app-event-header [event]="event"></app-event-header></header>
+<header><app-event-header [event]="event" type="event"></app-event-header></header>
 <main>
 
   <hr>
