--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="h3 mb-3"><small class="text-muted">{{tc.name}}</small></div>
-                <app-ticket-form [ticket]="ticket" [event]="purchaseContext" [form]="getTicketForm(ticket)"></app-ticket-form>
+                <app-ticket-form [ticket]="ticket" [purchaseContext]="purchaseContext" [form]="getTicketForm(ticket)"></app-ticket-form>
             </div>
           </div>
         </div>
