--- a/src/app/reservation/ticket-form/ticket-form.component.html
+++ b/src/app/reservation/ticket-form/ticket-form.component.html
@@ -28,11 +28,11 @@
       <app-additional-field [field]="field" [ticketUUID]="ticket.uuid" [form]="getAdditional(form)" [ticketAcquired]="ticket.acquired"></app-additional-field>
     </div>
 
-    <div class="form-group" *ngIf="event && event.contentLanguages.length > 1">
+    <div class="form-group" *ngIf="purchaseContext && purchaseContext.contentLanguages.length > 1">
       <label [attr.for]="ticket.uuid + '-userLanguage'" translate="reservation-page-complete.language"></label>
       <select [attr.id]="ticket.uuid + '-userLanguage'" formControlName="userLanguage" class="custom-select" appInvalidFeedback>
         <option value=""></option>
-        <option *ngFor="let lang of event.contentLanguages" [ngValue]="lang.locale">{{lang.displayLanguage}}</option>
+        <option *ngFor="let lang of purchaseContext.contentLanguages" [ngValue]="lang.locale">{{lang.displayLanguage}}</option>
       </select>
     </div>
   </div>
