--- a/src/app/additional-service/additional-service.component.html
+++ b/src/app/additional-service/additional-service.component.html
@@ -4,7 +4,7 @@
     <div class="item-price">
       <span *ngIf="additionalService.free" translate="common.free"></span>
       <span *ngIf="!additionalService.free && additionalService.fixPrice">
-        <app-price-tag [event]="event" [formattedPrice]="additionalService.formattedFinalPrice" [discountedPrice]="additionalService.formattedDiscountedPrice" [showTaxDetails]="additionalService.vatApplies"></app-price-tag>
+        <app-price-tag [purchaseContext]="event" [formattedPrice]="additionalService.formattedFinalPrice" [discountedPrice]="additionalService.formattedDiscountedPrice" [showTaxDetails]="additionalService.vatApplies"></app-price-tag>
       </span>
     </div>
     <div class="item-qty-selector">
