--- a/src/app/reservation/summary-table/summary-table.component.html
+++ b/src/app/reservation/summary-table/summary-table.component.html
@@ -12,17 +12,17 @@
       <td><span *ngIf="summaryRow.type === 'DYNAMIC_DISCOUNT'" translate="reservation.dynamic.discount.description"></span><span *ngIf="summaryRow.type !== 'DYNAMIC_DISCOUNT'">{{summaryRow.name}}</span></td>
       <td class="text-center">{{summaryRow.amount}}</td>
       <td class="text-right">{{summaryRow.price}}</td>
-      <td class="text-right"><app-price-tag [event]="event" [formattedPrice]="summaryRow.subTotal"></app-price-tag></td>
+      <td class="text-right"><app-price-tag [purchaseContext]="event" [formattedPrice]="summaryRow.subTotal"></app-price-tag></td>
     </tr>
   </tbody>
   <tfoot>
       <tr *ngIf="!reservationInfo.orderSummary.free && reservationInfo.orderSummary.displayVat && !event.vatIncluded">
           <td colspan="3">{{'reservation-page.vat'|translate:{'0': event.vat, '1': ('common.vat' | translate)} }}</td>
-          <td class="text-right"><app-price-tag [event]="event" [formattedPrice]="reservationInfo.orderSummary.totalVAT"></app-price-tag></td>
+          <td class="text-right"><app-price-tag [purchaseContext]="event" [formattedPrice]="reservationInfo.orderSummary.totalVAT"></app-price-tag></td>
       </tr>
       <tr>
         <th colspan="3" translate="reservation-page.total"></th>
-        <td class="text-right"><strong><app-price-tag [event]="event" [formattedPrice]="reservationInfo.orderSummary.totalPrice"></app-price-tag></strong></td>
+        <td class="text-right"><strong><app-price-tag [purchaseContext]="event" [formattedPrice]="reservationInfo.orderSummary.totalPrice"></app-price-tag></strong></td>
       </tr>
       <tr *ngIf="!reservationInfo.orderSummary.free && reservationInfo.orderSummary.displayVat && event.vatIncluded">
           <td colspan="3">{{'reservation-page.vat-included'|translate: {'0': event.vat, '1': ('common.vat' | translate)} }}</td>
