convert event -> purchaseContext

--- a/src/app/reservation/offline-payment/offline-payment.component.html
+++ b/src/app/reservation/offline-payment/offline-payment.component.html
@@ -9,7 +9,7 @@
   <div class="page-header">
     <h2 translate="reservation-page.title"></h2>
   </div>
-  <app-summary-table [event]="event" [reservationInfo]="reservationInfo"></app-summary-table>
+  <app-summary-table [purchaseContext]="event" [reservationInfo]="reservationInfo"></app-summary-table>
 
 
   <h4 [innerHTML]="'reservation-page-waiting.required-steps'|translate" class="mt-5"></h4>
