--- a/src/app/reservation/deferred-offline-payment/deferred-offline-payment.component.html
+++ b/src/app/reservation/deferred-offline-payment/deferred-offline-payment.component.html
@@ -7,7 +7,7 @@
         <div class="page-header">
             <h2 translate="reservation-page.title"></h2>
         </div>
-        <app-summary-table [event]="event" [reservationInfo]="reservationInfo"></app-summary-table>
+        <app-summary-table [purchaseContext]="event" [reservationInfo]="reservationInfo"></app-summary-table>
     
         <div class="text-center text-muted mt-5">{{'reservation-page-complete.order-information' | translate: {'0': reservationId, '1': reservationInfo.firstName + ' ' + reservationInfo.lastName} }}</div>
         <hr>
