--- a/src/app/reservation/payment-method-selector/payment-method-selector.component.html
+++ b/src/app/reservation/payment-method-selector/payment-method-selector.component.html
@@ -42,7 +42,7 @@
                 (paymentProvider)="registerCurrentPaymentProvider($event)">
             </app-onsite-payment-proxy>
             <app-stripe-payment-proxy
-                [event]="event"
+                [purchaseContext]="purchaseContext"
                 [reservation]="reservationInfo"
                 [proxy]="selectedPaymentProxy"
                 [method]="selectedPaymentMethod"
