--- a/src/app/reservation/offline-payment/offline-payment.component.html
+++ b/src/app/reservation/offline-payment/offline-payment.component.html
@@ -1,6 +1,6 @@
 <app-reservation>
 
-<div class="mb-2 mt-2 center-block" *ngIf="event && reservationInfo">
+<div class="mb-2 mt-2 center-block" *ngIf="purchaseContext && reservationInfo">
 
   <div class="alert alert-warning mt-2 mb-2 text-center">
     <h2><fa-icon [icon]="['fas', 'exclamation-triangle']" a11yRole="presentation"></fa-icon>{{' '}}<span [innerHTML]="'reservation-page-waiting.title' | translate: {'0': reservationInfo.formattedExpirationDate[translate.currentLang]}"></span></h2>
@@ -9,36 +9,36 @@
   <div class="page-header">
     <h2 translate="reservation-page.title"></h2>
   </div>
-  <app-summary-table [purchaseContext]="event" [reservationInfo]="reservationInfo"></app-summary-table>
+  <app-summary-table [purchaseContext]="purchaseContext" [reservationInfo]="reservationInfo"></app-summary-table>
 
 
   <h4 [innerHTML]="'reservation-page-waiting.required-steps'|translate" class="mt-5"></h4>
   <ol class="mt-3">
-      <li *ngIf="event.bankAccountOwner.length > 0">
-          <p class="no-margin-bottom" [innerHTML]="'reservation-page-waiting.required-steps.1.with-bank-account-owner' | translate: {'0': event.currency+' '+reservationInfo.orderSummary.totalPrice, '1': event.bankAccount}"></p>
-          <p class="bank-account-owner-info" *ngFor="let ownerLine of event.bankAccountOwner">{{ownerLine}}</p>
+      <li *ngIf="purchaseContext.bankAccountOwner.length > 0">
+          <p class="no-margin-bottom" [innerHTML]="'reservation-page-waiting.required-steps.1.with-bank-account-owner' | translate: {'0': purchaseContext.currency+' '+reservationInfo.orderSummary.totalPrice, '1': purchaseContext.bankAccount}"></p>
+          <p class="bank-account-owner-info" *ngFor="let ownerLine of purchaseContext.bankAccountOwner">{{ownerLine}}</p>
           <p class="no-margin-bottom" [innerHTML]="'reservation-page-waiting.required-steps.1.with-bank-account-owner.2' | translate: {'0': paymentReason}"></p>
       </li>
-      <li *ngIf="event.bankAccountOwner.length === 0"
-          [innerHTML]="'reservation-page-waiting.required-steps.1' | translate: {'0': event.currency+' '+reservationInfo.orderSummary.totalPrice, '1': event.bankAccount, '2': paymentReason}">
+      <li *ngIf="purchaseContext.bankAccountOwner.length === 0"
+          [innerHTML]="'reservation-page-waiting.required-steps.1' | translate: {'0': purchaseContext.currency+' '+reservationInfo.orderSummary.totalPrice, '1': purchaseContext.bankAccount, '2': paymentReason}">
       </li>
-      <li [innerHTML]="'reservation-page-waiting.required-steps.2' | translate: {'0': event.organizationEmail, '1': reservationInfo.id}"></li>
+      <li [innerHTML]="'reservation-page-waiting.required-steps.2' | translate: {'0': purchaseContext.organizationEmail, '1': reservationInfo.id}"></li>
       <li [innerHTML]="'reservation-page-waiting.required-steps.3' | translate"></li>
   </ol>
 
 
   <div class="text-center mt-5">
-    <h4 [innerHTML]="'reservation-page-waiting.questions' | translate: {'0': event.organizationEmail, '1': reservationInfo.id}"></h4>
+    <h4 [innerHTML]="'reservation-page-waiting.questions' | translate: {'0': purchaseContext.organizationEmail, '1': reservationInfo.id}"></h4>
   </div>
 
   <div class="text-center text-muted mt-5">{{'reservation-page-complete.order-information' | translate: {'0': reservationId, '1': reservationInfo.firstName + ' ' + reservationInfo.lastName} }}</div>
   <hr>
   <div class="row d-flex justify-content-between mobile-add-margin-bottom">
-      <div class="col-md-5 col-12 order-md-1" *ngIf="event.invoicingConfiguration.userCanDownloadReceiptOrInvoice && reservationInfo.invoiceNumber !== null">
+      <div class="col-md-5 col-12 order-md-1" *ngIf="purchaseContext.invoicingConfiguration.userCanDownloadReceiptOrInvoice && reservationInfo.invoiceNumber !== null">
           <a [href]="'/api/v2/public/' + purchaseContextType + '/' + publicIdentifier + '/reservation/' + reservationInfo.id + '/invoice'" class="btn btn-success block-button" target="_blank" translate="reservation-page-complete.download-your-invoice"></a>
       </div>
-      <div class="col-md-5 col-12 order-md-1 text-center" *ngIf="!event.invoicingConfiguration.userCanDownloadReceiptOrInvoice"><p translate="reservation-page-waiting.invoice-will-be-sent"></p></div>
-      <div class="col-md-5 col-12 order-md-0"><a [href]="event.websiteUrl" class="btn btn-light block-button" translate="to-event-site"></a></div>
+      <div class="col-md-5 col-12 order-md-1 text-center" *ngIf="!purchaseContext.invoicingConfiguration.userCanDownloadReceiptOrInvoice"><p translate="reservation-page-waiting.invoice-will-be-sent"></p></div>
+      <div class="col-md-5 col-12 order-md-0"><a [href]="purchaseContext.websiteUrl" class="btn btn-light block-button" translate="to-event-site"></a></div>
   </div>
 </div>
 
