--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="event" class="add-margin-bottom">
-    <header><app-event-header [event]="event"></app-event-header></header>
+    <header><app-event-header [purchaseContext]="event"></app-event-header></header>
     <main>
 
     <hr>
