--- a/src/app/event-list-all/event-list-all.component.html
+++ b/src/app/event-list-all/event-list-all.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="events">
+<ng-container *ngIf="events && languages">
     <app-language-selector [contentLanguages]="languages"></app-language-selector>
   
     <h1 translate="event-list.title"></h1>
