--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,7 +19,7 @@ $custom-control-indicator-border-color: $gray-700;
 
 @include media-breakpoint-up(md) {
     body {
-        background-color: #E5E5E5;
+        background-color: #f2f2f2;
     }
     .application-container {
         margin-top: $border-radius;
