--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,32 +1,34 @@
-<ng-container *ngIf="events">
+<div *ngIf="events" class="application-container p-2 p-md-5">
   <app-language-selector [contentLanguages]="languages"></app-language-selector>
 
-  <h1 translate="event-list.title"></h1>
+  <div *ngIf="containsEvents || !containsSubscriptions" class="mb-2">
+    <h1 translate="event-list.title"></h1>
+
+    <div class="mb-3" *ngFor="let event of events">
+      <app-basic-event-info [event]="event"></app-basic-event-info>
+    </div>
+    <div *ngIf="displayViewAllEventsButton" class="text-center">
+      <a [routerLink]="['events-all']" class="btn btn-light" translate="home.view.all.events"></a>
+    </div>
 
 
-  <div class="mb-3" *ngFor="let event of events">
-    <app-basic-event-info [event]="event"></app-basic-event-info>
+    <div class="alert text-center" *ngIf="events.length == 0">
+      <div class="h3" translate="event-list.no-events"></div>
+    </div>
   </div>
-  <div *ngIf="allEvents.length > 4" class="text-center">
-    <a [routerLink]="['events-all']" class="btn btn-outline-primary" translate="home.view.all.events"></a>
-  </div>
 
+  <hr *ngIf="containsEvents && containsSubscriptions">
 
-  <div class="alert text-center" *ngIf="events.length == 0">
-    <h3 translate="event-list.no-events"></h3>
-  </div>
-
-  <div *ngIf="subscriptions && subscriptions.length > 0">
-    <hr>
+  <div *ngIf="containsSubscriptions">
     <h1 translate="subscription.title"></h1>
 
-    <div class="mb-3" *ngFor="let subscription of subscriptions">
-      <app-basic-subscription-info [subscription]="subscription"></app-basic-subscription-info>
+    <div class="card-deck">
+        <app-basic-subscription-info [subscription]="subscription" *ngFor="let subscription of subscriptions" class="card card-light event-card"></app-basic-subscription-info>
     </div>
 
-    <div *ngIf="allSubscriptions.length > 4" class="text-center">
-      <a [routerLink]="['subscriptions-all']" class="btn btn-outline-primary" translate="home.view.all.subscriptions"></a>
+    <div *ngIf="displayViewAllSubscriptionsButton" class="text-center">
+      <a [routerLink]="['subscriptions-all']" class="btn btn-light" translate="home.view.all.subscriptions"></a>
     </div>
   </div>
 
-</ng-container>
+</div>
