--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -1,5 +1,7 @@
-<div *ngIf="purchaseContext" class="add-margin-bottom">
-    <header><app-event-header [purchaseContext]="purchaseContext" [type]=""></app-event-header></header>
-    <hr>
-    <main><ng-content></ng-content></main>
-</div>
+<app-purchase-context-container>
+  <div *ngIf="purchaseContext" class="add-margin-bottom">
+      <header><app-event-header [purchaseContext]="purchaseContext" [type]=""></app-event-header></header>
+      <hr>
+      <main><ng-content></ng-content></main>
+  </div>
+</app-purchase-context-container>
