--- a/src/app/subscription-display/subscription-display.component.html
+++ b/src/app/subscription-display/subscription-display.component.html
@@ -1,12 +1,28 @@
-<ng-container *ngIf="subscription">
-    <header><app-event-header [purchaseContext]="subscription"></app-event-header></header>
+<app-purchase-context-container>
+  <div *ngIf="subscription" class="add-margin-bottom">
+    <header>
+      <app-event-header [purchaseContext]="subscription"></app-event-header>
+    </header>
     <main>
+      <hr>
+      <h2>{{ subscription.title[translateService.currentLang] }}</h2>
+      <div class="mt-3">
+        <app-subscription-summary [subscription]="subscription"></app-subscription-summary>
+      </div>
+      <hr>
         <form (submit)="submitForm()">
-            {{subscription|json}}
 
-            <div class="row d-flex justify-content-between mobile-add-margin-bottom">
-                <div class="col-md-5 order-md-1 col-12"><button type="submit" class="block-button btn btn-success" translate="show-event.continue"></button></div>
-            </div>
+          <div class="markdown-content" [innerHTML]="subscription.description[translateService.currentLang]"></div>
+
+          <hr class="mt-5">
+
+          <app-footer-links [purchaseContext]="subscription"></app-footer-links>
+
+          <div class="row d-flex justify-content-between mobile-add-margin-bottom">
+            <div class="col-md-5 order-md-1 col-12"><button type="submit" class="block-button btn btn-success" translate="show-event.continue"></button></div>
+            <div class="col-md-5 order-md-0 col-12 "><a [href]="subscription.websiteUrl" class="block-button btn btn-light" translate="common.back-to-organizer"></a></div>
+          </div>
         </form>
     </main>
-</ng-container>
+  </div>
+</app-purchase-context-container>
