--- a/src/app/subscription-list-all/subscription-list-all.component.html
+++ b/src/app/subscription-list-all/subscription-list-all.component.html
@@ -1,15 +1,14 @@
-<ng-container *ngIf="subscriptions">
-    <app-language-selector [contentLanguages]="languages"></app-language-selector>
+<div *ngIf="subscriptions" class="application-container p-2 p-md-5">
+  <app-language-selector [contentLanguages]="languages"></app-language-selector>
 
-    <h1 translate="subscription.title"></h1>
+  <h1 translate="subscription.title"></h1>
 
 
-    <div class="event-list-card mb-3" *ngFor="let subscription of subscriptions">
-      <app-basic-subscription-info [subscription]="subscription"></app-basic-subscription-info>
-    </div>
+  <div class="event-list-card mb-3" *ngFor="let subscription of subscriptions">
+    <app-basic-subscription-info [subscription]="subscription"></app-basic-subscription-info>
+  </div>
 
-    <div class="alert text-center" *ngIf="subscriptions.length == 0">
-      <h3 translate="subscription.no-subscriptions"></h3>
-    </div>
-
-  </ng-container>
+  <div class="alert text-center" *ngIf="subscriptions.length == 0">
+    <h3 translate="subscription.no-subscriptions"></h3>
+  </div>
+</div>
